[gd_scene load_steps=12 format=2]

[ext_resource path="res://skrypty/menu głowne.gd" type="Script" id=1]
[ext_resource path="res://grafika/graj.png" type="Texture" id=2]
[ext_resource path="res://grafika/opcje.png" type="Texture" id=3]
[ext_resource path="res://sceny/Tiletebar.tscn" type="PackedScene" id=4]
[ext_resource path="res://grafika/exit.png" type="Texture" id=5]
[ext_resource path="res://grafika/czolgi.png" type="Texture" id=6]
[ext_resource path="res://grafika/Zrzut ekranu z 2021-04-18 16-56-01.png" type="Texture" id=7]
[ext_resource path="res://fonts/dogica.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://grafika/Matrix-Raining-Code.webm" type="VideoStream" id=9]
[ext_resource path="res://fonts/Lastminute - XmFcvBIzBjPxb5Z.wav" type="AudioStream" id=10]

[sub_resource type="DynamicFont" id=1]
size = 29
font_data = ExtResource( 8 )

[node name="menu głowne" type="Node2D"]
script = ExtResource( 1 )

[node name="VideoPlayer" type="VideoPlayer" parent="."]
margin_left = 5.0
margin_top = 2.0
margin_right = 1057.0
margin_bottom = 605.0
stream = ExtResource( 9 )
autoplay = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="graj" type="TextureButton" parent="."]
margin_left = 467.756
margin_top = 69.6796
margin_right = 542.756
margin_bottom = 135.68
texture_normal = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="opcje" type="TextureButton" parent="."]
margin_left = 467.756
margin_top = 149.382
margin_right = 557.756
margin_bottom = 215.383
texture_normal = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="exit" type="TextureButton" parent="."]
margin_left = 467.756
margin_top = 227.44
margin_right = 542.756
margin_bottom = 293.44
texture_normal = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="window" type="Node" parent="."]

[node name="start" parent="window" instance=ExtResource( 4 )]
margin_left = 172.0
margin_top = -600.0
margin_right = 592.0
margin_bottom = -565.0

[node name="background" type="ColorRect" parent="window/start"]
margin_top = 34.0
margin_right = 419.676
margin_bottom = 260.0
color = Color( 0.658824, 0.709804, 0.8, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="czołgi" type="TextureButton" parent="window/start"]
margin_left = 3.36737
margin_top = 118.981
margin_right = 102.367
margin_bottom = 184.981
texture_normal = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Zrzut ekranu z 2021-04-18 16-56-01" type="Sprite" parent="window/start/czołgi"]
position = Vector2( 66.839, -42.7051 )
scale = Vector2( 0.0979542, 0.0970314 )
texture = ExtResource( 7 )

[node name="opc" parent="window" instance=ExtResource( 4 )]
margin_top = -600.0
margin_bottom = -565.0

[node name="background" type="ColorRect" parent="window/opc"]
margin_left = 1.0
margin_top = 34.0
margin_right = 420.676
margin_bottom = 260.0
color = Color( 0.658824, 0.8, 0.745098, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 311.411
margin_right = 717.411
margin_bottom = 61.0
custom_fonts/font = SubResource( 1 )
text = "Project friend"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 542.756, 192 )
stream = ExtResource( 10 )
autoplay = true

[connection signal="pressed" from="graj" to="." method="_on_graj_pressed"]
[connection signal="pressed" from="opcje" to="." method="_on_opcje_pressed"]
[connection signal="pressed" from="exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="window/start/czołgi" to="." method="_on_czogi_pressed"]
